<resources>
    <string name="app_name">giffgaff for Wear OS</string>

    <string name="testing_username">"google_testing_usr"</string>
    <string name="testing_password">"ZbsWNyy1cm28KXQH8Ag9BVmdXsWtK0zOld9ERXipEsGS2TeMqq1UA09ffabJsQ7F"</string>
    <string name="testing_token">"ZbsWNyy1cm28KXQH8Ag9BVmdXsWtK0zOld9ERXipEsGS2TeMqq1UA09ffabJsQ7F"</string>

    <string name="token_invalid_on_launch">Please log in again</string>
    <string name="welcome_member">Logged in as %1$s</string>

    <!-- Sign in notice fragment -->
    <string name="sign_in_info_button_text">Continue</string>
    <string name="sign_in_info_required_description_primary">Sign in to giffgaff</string>
    <string name="sign_in_info_required_description_secondary">Your details will be stored on your watch and only be sent to giffgaff for logging in.</string>

    <!-- Sign in page -->
    <string name="sign_in_header">Sign in</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_in_membername_label">Member name or phone number</string>
    <string name="sign_in_password_label">Password</string>
    <string name="sign_in_invalid_details_message">Looks like that\'s not the right account info. Your account will be locked for 30 mins after 3 login failures.</string>
    <string name="sign_in_blank_details_message">Please enter your member name and password.</string>
    <string name="sign_in_locked_message">Oh no, your account\'s been locked. Try again in 30 mins, or reset your password to gain access now.</string>

    <!-- Account details page -->
    <string name="account_welcome">Welcome %1$s</string>
    <string name="account_fetching_data">Fetching account info…</string>

    <string name="account_data_remaining">%1$s remaining</string>
    <string name="account_unlimited_data">Unlimited data</string>
    <string name="account_no_goodybag">No active goodybag</string>
    <string name="account_unlimited_calls_and_texts">Unltd. mins/texts</string>
    <string name="account_credit_balance">£%.2f credit</string>

    <string name="account_action_log_out">Log out</string>
    <string name="account_action_refresh">Refresh</string>

    <!-- Invalid SSL cert help fragment -->
    <string name="ssl_handshake_fail_heading">SSL Handshake Failed</string>
    <string name="ssl_handshake_fail_description_1">We couldn\'t connect to giffgaff\'s API securely.</string>
    <string name="ssl_handshake_fail_description_2">This is usually an issue with the date and time on your watch. Check that it\'s within 2 minutes of the actual time.</string>

    <!-- API details -->
    <string name="api_graphql_endpoint">"https://publicapi.giffgaff.com/gateway/graphql"</string>
    <string name="api_oauth_endpoint">"https://id.giffgaff.com/auth/oauth/token"</string>

    <string name="api_oauth_master_token">"Basic NGEwNWJmMjE5YjM5ODU2NDdkOWI5YTNiYTYxMGE5Y2U6T1F2NGNmaXlvbDhUdkNXNHlpTEdqMGMxQWtUUjNOMkpmUnpxN1hHcU14az0="</string>

    <string name="api_user_agent">"com.giffgaffmobile.controller/8.23.8 (device: Android Smartwatch; OS: WearOS)"</string>
    <string name="api_x_request_info">"This request came from a community-made app to allow members to check their giffgaff account from their Wear OS Smartwatch"</string>
    <string name="api_x_contact_info">"mrjeeves on the giffgaff community"</string>

    <!-- API connection issues -->
    <string name="api_unknown_error">Unknown error.</string>
    <string name="api_invalid_ssl">Please check your date and time settings.</string>
    <string name="api_invalid_dns">Please check your connection. [DNS]</string>
</resources>