<?xml version="1.0" encoding="utf-8"?>

<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/gg_text_speak_center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:background="@color/gg_black"
    android:theme="@style/CustomAppTheme"
    tools:context=".InvalidSslErrorHelp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="30dp">

            <TextView
                style="@style/gg_text_speak_up_center"
                android:text="@string/ssl_handshake_fail_heading" />

            <TextView
                style="@style/gg_text_whisper_center"
                android:text="@string/ssl_handshake_fail_description_1" />

            <TextView
                style="@style/gg_text_whisper_center"
                android:text="@string/ssl_handshake_fail_description_2" />
        </LinearLayout>
    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>